Fix spacing in skills section

--- a/style.css
+++ b/style.css
@@ -182,6 +182,11 @@ header {
   line-height: 1.25;
   letter-spacing: -1px;
   color: #ffffff;
+  margin: 0;
+}
+
+.skill p {
+  margin: 0;
 }
 
 .skills--ring {
